WIP
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>